codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_with_working_header.snap
---
source: tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
" 进行中 (0s • Esc 中断)                                                         " Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (19, " "), (21, " ")]
"                                                                                "
